pkl-core/src/test/files/LanguageSnippetTests/input/errors/spreadSyntaxCannotHaveElement.pkl
local source {
  1
  2
  3
}

res: Mapping = new {
  ...source
}
